--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.14.5",
