--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.9.4",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
+    "react-barcode": "^1.5.3",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
