--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "react-to-pdf": "^1.0.1",
     "sweetalert2": "^11.14.5",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.18.5"
