--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^1.7.8",
     "firebase": "^9.9.4",
+    "html2pdf.js": "^0.10.2",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-barcode": "^1.5.3",
